# self-healing-pipeline-research-paper

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
docs/: day-07-results-discussion-and-validity.md  day-08-related-work-and-research-gap.md  day-09-introduction-and-contributions.md  day-10-methodology-and-experimental-design.md  day-11-first-complete-paper-draft-structure.md  day-13-manuscript-v0.1-review-and-cleanup.md  day-14-runtime-and-artifact-traceability.md  day-16-references-upgrade-and-citation-cleanup.md  day-17-manuscript-v0.3-citation-upgrade-summary.md  day-18-manuscript-quality-audit.md  day-19-target-venue-and-formatting-strategy.md  day-20-manuscript-v0.4-quality-edits-summary.md  day-22-ieee-pdf-quality-review.md  day-23-submission-readiness-audit.md  day-24-release-submission-package.md  day-25-submission-support-package.md  day-26-venue-targeting-package.md  day-27-verified-venue-research-package.md  day-28-ieee-access-readiness-package.md  day-29-ieee-access-working-folder.md  day-30-final-completion-package.md  ieee-access-submission-metadata.md  independent-replication-guide.md  manuscript-v0.1.md  manuscript-v0.2.md  manuscript-v0.3.md  phase-2-day-1-manuscript-inspection.md  phase-2-day-10-artifact-reproducibility.md  phase-2-day-11-pdf-layout-rebuild.md  phase-2-day-12-pdf-quality-audit.md  phase-2-day-2-methodology-expansion.md  phase-2-day-3-experiments-expansion.md  phase-2-day-4-results-expansion.md  phase-2-day-5-background-expansion.md  phase-2-day-6-limitations-expansion.md  references-v0.3.bib  (+5 more)
(+202 files in other folders)
