[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-constrained-self-healing-pipeline"
version = "0.1.0"
description = "Reproducible research implementation for policy-constrained self-healing data pipelines."
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
